hphp/test/zend/bad/ext-standard-filters/php_user_filter_02.php
<?php
class foo extends php_user_filter {
    function filter($in, $out, $consumed, $closing) {}
    function onCreate() {}
    function onClose() {}
}
?>